Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-22876

Projects not sorted when adding source file

    XMLWordPrintable

Details

    • Windows
    • 44ddc028b52ba1271f146d288f220cf213c19896 (qt-creator/qt-creator/4.11)

    Description

      This looks to be a regression on **QTCREATORBUG-1935.

      I add a C++ source file, and have multiple projects open. When I am asked to choose which project to add the file to, the list is not sorted alphabetically, and it is really hard to find the correct project.

      See attached screenshot

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-22876
        # Subject Branch Project Status CR V

        Activity

          People

            kandeler Christian Kandeler
            asperamanca Robert Schimkowitsch
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes