Wizards: Make sure project combobox uses same sorting as project tree

Fixes: QTCREATORBUG-22876
Change-Id: Ia8817851a263e6ba3aad7ac0d316b7277ad0240e
Reviewed-by: hjk <hjk@qt.io>